# ChangeLog for x11-terms/kterm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/kterm/ChangeLog,v 1.27 2010/02/11 16:06:38 ulm Exp $

  11 Feb 2010; Ulrich Mueller <ulm@gentoo.org> kterm-6.2.0-r4.ebuild,
  kterm-6.2.0-r5.ebuild:
  Fix LICENSE, bug 298556.

*kterm-6.2.0-r5 (20 Jun 2008)

  20 Jun 2008; MATSUU Takuto <matsuu@gentoo.org> -kterm-6.2.0-r2.ebuild,
  -kterm-6.2.0-r3.ebuild, kterm-6.2.0-r4.ebuild, +kterm-6.2.0-r5.ebuild:
  Fixed dependency, bug #227563. Removed bindnow-flags, bug #227031.
  Removed old versions.

  06 Feb 2008; Fabian Groffen <grobian@gentoo.org> kterm-6.2.0-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  kterm-6.2.0-r2.ebuild, kterm-6.2.0-r3.ebuild, kterm-6.2.0-r4.ebuild:
  Drop virtual/x11 references.

  14 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> kterm-6.2.0-r2.ebuild,
  kterm-6.2.0-r3.ebuild, kterm-6.2.0-r4.ebuild:
  Add missing libXaw dependency, thanks to Patrick Lauer in bug #150628.

  18 Jul 2006; Michael Hanselmann <hansmi@gentoo.org> kterm-6.2.0-r4.ebuild:
  Stable on ppc.

  02 Jul 2006; Mamoru KOMACHI <usata@gentoo.org> kterm-6.2.0-r4.ebuild:
  Marked stable for x86.

  29 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> kterm-6.2.0-r4.ebuild:
  Fix missing dependency over gccmakedep and imake (thanks to Benigno B.
  Junior for reporting), avoid collision on modular setup, respect CFLAGS and
  LDFLAGS.

*kterm-6.2.0-r4 (16 Feb 2006)

  16 Feb 2006; Alastair Tse <liquidx@gentoo.org>
  +files/6.2.0-underline.patch, +kterm-6.2.0-r4.ebuild:
  added more support for escape characters. thanks to OKUMURA N, Shin-ya
  (#104028)

  15 Feb 2006; Luis Medinas <metalgod@gentoo.org> kterm-6.2.0-r3.ebuild:
  Added ~amd64 keyword.

  13 Feb 2006; Alastair Tse <liquidx@gentoo.org> kterm-6.2.0-r2.ebuild,
  kterm-6.2.0-r3.ebuild:
  add app-text/rman dependency and modular-x-ified
