@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 6.2.0-underline.patch 540 RMD160 1d410fd3187387cfc3f25288391b9873faa4a9e8 SHA1 6fe688d6048dbb6de1c3a4d24e3f6bb7e6a46e40 SHA256 00198e2c7fa6f262821273a8ab1e1d598c5d1991a8edeb65991603d28215465b
 AUX kterm-6.2.0-Xaw3d.patch 937 RMD160 e967877091c41eb49c713c3726398c602acbb548 SHA1 b4f6635df56134592bb75c5bb8f308d9b4f18977 SHA256 9753f060289e82b8a173cfdf8ec3e684dc539224efac8a85a8c668157f0a8879
 AUX kterm-6.2.0-gentoo.patch 1519 RMD160 d1d23081452229b13601b79b4116140d6028e2e1 SHA1 10613a74922ae5a66a0b09bb4535d25928d11eb4 SHA256 aa1623037a477f81cb1fd76a5408a3d62bb6a4ceb30e04bc00760d6e8f4934f9
@@ -6,7 +9,14 @@ AUX kterm-ad-gentoo.diff 737 RMD160 1a3c32782bdd064d7a9c777117162e185caf4f6e SHA
 DIST kterm-6.2.0-wpi.patch.gz 6629 RMD160 8116e66d03b16b6c15e30071f7a992ce6fe0f06e SHA1 d3655dcbddc823748fd3371616cd854759fac9ca SHA256 f91f37ef8b9bf84ebfb24b26b43089af25f9756680cbf875320fda774de2b591
 DIST kterm-6.2.0.ext02.patch.gz 15290 RMD160 02746f8c23c876583dbc314fd38307ed96a1f446 SHA1 e94208009e8f18a7ecab4ffbaf9589e9c4632623 SHA256 4501522c5632936b316ba820633cfa887192942e123a28b031d72b4d675c85eb
 DIST kterm-6.2.0.tar.gz 200448 RMD160 d23c755f119b5602a3c6f6ac97e27e10c43a8bfe SHA1 23b612254e9f7c9f5e233a4bcacc651887a3f7ee SHA256 ecc965b926483cb97b74d1da5808359fac95d937dfa5e7338395988b1a3afaa5
-EBUILD kterm-6.2.0-r4.ebuild 2191 RMD160 2d495f1ec222ae4c5c90070f989a5c2f25189e58 SHA1 375728578c08c49bbb218d7f7088ca49d7fdd3ff SHA256 30f44e244ed032ed0d1f2afa8174c86b10a098118d871bb11392560031869d93
-EBUILD kterm-6.2.0-r5.ebuild 2181 RMD160 b2590f924d694f3b63a8cbf8052d9595f7f6bfbd SHA1 833c34ca31e7501a225b0cb8c70eca8ae1be61ae SHA256 14b37582dcf010c38fbd6601b066fa8716edf1befdafef98fd2b38d1fb9527f8
-MISC ChangeLog 4158 RMD160 8eb3e94e7ee61ae0079ee80676b66e98f5508bb0 SHA1 66b0ec108fb47bc969af8d31540c9c5753f52235 SHA256 5d29170e443dfecb9e379f8e6f2c40ddc3db789ec8dd0c800fd17ffcce26e076
+EBUILD kterm-6.2.0-r4.ebuild 2199 RMD160 b7bd77c3e20ecc8aa8944cf4a4fd21bb43917f58 SHA1 269ba931fc4eb7d0a6ef68e7382eabd3178d7bfc SHA256 c1b824c58dbf52eb1d0f34a3dd6a7fa06e375bb53ae341c6692957439d081459
+EBUILD kterm-6.2.0-r5.ebuild 2191 RMD160 5399e9ed3ab065fd6179f5d957f9a9560a02a76a SHA1 83a100f54192fc8dee8b38d19b717fcfb711bea3 SHA256 6955a47f6ce74211c7c7e5e030d250a3de3fed55802da9455fe8dd3ee089261e
+MISC ChangeLog 4533 RMD160 1693fa814a91c7ba36978eb321777b3c008f7493 SHA1 3c8fc2fd452b621b3c4eb6c63f662fb987545495 SHA256 9ee52c4529b9541bcb734e3a707760e8a70bc8ba40fc7300fa8fbc94d2b9231d
 MISC metadata.xml 156 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad SHA1 8ccc2b0f20743002b783b1f7b5162c71f7f54c2e SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk/BEjkACgkQX3X2B8XHTolLswCgika9ggZvS4IAqSJ/ca4u3o0z
+5ucAnjugpL4oilgzYvEJMl/slsLIedhN
+=7KC8
+-----END PGP SIGNATURE-----
