@@ -1,6 +1,16 @@
 # ChangeLog for x11-terms/kterm
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/kterm/ChangeLog,v 1.27 2010/02/11 16:06:38 ulm Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/kterm/ChangeLog,v 1.30 2012/02/16 19:17:30 phajdan.jr Exp $
+
+  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> kterm-6.2.0-r5.ebuild:
+  x86 stable wrt bug #397295
+
+  03 Feb 2012; Brent Baude <ranger@gentoo.org> kterm-6.2.0-r5.ebuild:
+  Marking kterm-6.2.0-r5 ppc for bug 397295
+
+  02 Aug 2011; Matt Turner <mattst88@gentoo.org> kterm-6.2.0-r4.ebuild,
+  kterm-6.2.0-r5.ebuild:
+  Renamed x11-libs/Xaw3d to x11-libs/libXaw3d.
 
   11 Feb 2010; Ulrich Mueller <ulm@gentoo.org> kterm-6.2.0-r4.ebuild,
   kterm-6.2.0-r5.ebuild:
